--- a/src/test/resources/data.int2.KR.properties
+++ b/src/test/resources/data.int2.KR.properties
@@ -5,6 +5,10 @@ password = audatex
 plate_number = 12가1234
 currency = KRW
 
+#Existing case to be used
+url_to_claim_details = https://www-int2.audatex.sg/breclient/ui?taskId=3ACFA27C-7BED-8CB3-3846-E90940BD6656&process=BRE&step=Claim+Details
+
+
 # search tree
 Manufacturer = BMW
 Model = [12]
