--- a/src/test/resources/data.int2.KR.properties
+++ b/src/test/resources/data.int2.KR.properties
@@ -7,7 +7,7 @@ currency = KRW
 
 #Existing case to be used
 url_to_claim_details = https://www-int2.audatex.sg/breclient/ui?taskId=3ACFA27C-7BED-8CB3-3846-E90940BD6656&process=BRE&step=Claim+Details
-
+url_to_damage_capturing = https://www-int2.audatex.sg/breclient/ui?taskId=3ACFA27C-7BED-8CB3-3846-E90940BD6656&process=BRE&step=DamageCapturing
 
 # search tree
 Manufacturer = BMW
