update production test data

--- a/src/test/resources/data.prod.KR.properties
+++ b/src/test/resources/data.prod.KR.properties
@@ -5,6 +5,10 @@ password = audatex
 plate_number = 12가1234
 currency = KRW
 
+#Existing case to be used
+url_to_claim_details = https://www.audatex.kr/breclient/ui?taskId=B15C02F0-F4C7-7A4A-AD2C-B7D745139ED4&process=BRE&step=Claim+Details
+url_to_damage_capturing = https://www.audatex.kr/breclient/ui?taskId=B15C02F0-F4C7-7A4A-AD2C-B7D745139ED4&process=BRE&step=DamageCapturing
+
 # search tree
 Manufacturer = BMW
 Model = [12]
