--- a/src/test/resources/data.int2.KR.properties
+++ b/src/test/resources/data.int2.KR.properties
@@ -1,13 +1,13 @@
 test_url = https://www-int2.audatex.sg/breclient
-ins_username = A_KR_BRE_IN
-rep_username = A_KR_BRE_GA
+ins_username = M_KR_BRE_IN_BruceL
+rep_username = M_KR_BRE_GA_BruceL
 password = audatex
 plate_number = 12가1234
 currency = KRW
 
 #Existing case to be used
-url_to_claim_details = https://www-int2.audatex.sg/breclient/ui?taskId=3ACFA27C-7BED-8CB3-3846-E90940BD6656&process=BRE&step=Claim+Details
-url_to_damage_capturing = https://www-int2.audatex.sg/breclient/ui?taskId=3ACFA27C-7BED-8CB3-3846-E90940BD6656&process=BRE&step=DamageCapturing
+url_to_claim_details = https://www-int2.audatex.sg/breclient/ui?taskId=C3CF09F3-4174-D114-C0BD-2D19852EB5C0&process=BRE&step=Claim+Details
+url_to_damage_capturing = https://www-int2.audatex.sg/breclient/ui?taskId=C3CF09F3-4174-D114-C0BD-2D19852EB5C0&process=BRE&step=DamageCapturing
 
 # search tree
 Manufacturer = BMW
