--- a/src/test/resources/data.prod.KR.properties
+++ b/src/test/resources/data.prod.KR.properties
@@ -1,13 +1,13 @@
 test_url = https://www.audatex.kr/breclient
-ins_username = kr_insurer2
-rep_username = kr_repairer2.kr
-password = audatex
+ins_username = Bruce.liao.in.kr
+rep_username = Bruce.liao.ga.kr
+password = demo
 plate_number = 12가1234
 currency = KRW
 
 #Existing case to be used
-url_to_claim_details = https://www.audatex.kr/breclient/ui?taskId=B15C02F0-F4C7-7A4A-AD2C-B7D745139ED4&process=BRE&step=Claim+Details
-url_to_damage_capturing = https://www.audatex.kr/breclient/ui?taskId=B15C02F0-F4C7-7A4A-AD2C-B7D745139ED4&process=BRE&step=DamageCapturing
+url_to_claim_details = https://www.audatex.kr/breclient/ui?taskId=C9AE457E-38F3-8E06-E981-0E7E1E07D085&process=BRE&step=Claim+Details
+url_to_damage_capturing = https://www.audatex.kr/breclient/ui?taskId=C9AE457E-38F3-8E06-E981-0E7E1E07D085&process=BRE&step=DamageCapturing
 
 # search tree
 Manufacturer = BMW
@@ -49,3 +49,5 @@ CSV_UnitPrice = 100
 Approved_KR = 승인완료
 Rejected_KR = 반려
 
+#xrecord
+xrecord = X$    1          C7047D72D4881621E19BC3DB13DF3C2C                                                             AR                X199992500035E111301   013801            N06    0209  63890 2<<  2250000000000000050000        1         1   1<      0KRW  0 17 X2    251       100                                                                                                             X4    2L  0283 5.6    GM                                                                                                        X5    3  050000000000000000000000000000050000                      WBAPB11010WE07089       410KO 0                          00 1
