added b2b test case

--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,10 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/src/main/resources/axn-b2b-client-1.0-SNAPSHOT.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
