--- a/src/test/resources/data.prod.KR.properties
+++ b/src/test/resources/data.prod.KR.properties
@@ -51,3 +51,4 @@ Rejected_KR = 반려
 
 #xrecord
 xrecord = X$    1          C7047D72D4881621E19BC3DB13DF3C2C                                                             AR                X199992500035E111301   013801            N06    0209  63890 2<<  2250000000000000050000        1         1   1<      0KRW  0 17 X2    251       100                                                                                                             X4    2L  0283 5.6    GM                                                                                                        X5    3  050000000000000000000000000000050000                      WBAPB11010WE07089       410KO 0                          00 1
+b2b_url = https://www.audatex.sg/
