--- a/src/test/resources/data.int2.KR.properties
+++ b/src/test/resources/data.int2.KR.properties
@@ -50,9 +50,9 @@ Approved_KR = 승인완료
 Rejected_KR = 반려
 
 #B2B
-b2b_loginId = rep_beoungil
-b2b_password = PRODrep
-b2b_taskId: 91064FBA-7591-8ACB-FBCE-134FBFCE8751
+b2b_loginId = M_KR_BRE_IN_BruceL
+b2b_password = audatex
+b2b_taskId: C3CF09F3-4174-D114-C0BD-2D19852EB5C0
 b2b_responseStylesheet: Standard_out_ver0008.xslt
-b2b_url = https://www.audatex.sg/
+b2b_url = https://www-int2.audatex.sg/
 xrecord = X$    1          C7047D72D4881621E19BC3DB13DF3C2C                                                             AR                X199992500035E111301   013801            N06    0209  63890 2<<  2250000000000000050000        1         1   1<      0KRW  0 17 X2    251       100                                                                                                             X4    2L  0283 5.6    GM                                                                                                        X5    3  050000000000000000000000000000050000                      WBAPB11010WE07089       410KO 0                          00 1
