--- a/src/test/resources/data.prod.CN.properties
+++ b/src/test/resources/data.prod.CN.properties
@@ -1,6 +1,8 @@
 #B2B
-b2b_loginId = zhiqiang.wang.ga
-b2b_password = audatex
+b2b_loginId = qdc_test5
+b2b_password = demo
 b2b_url = https://www.audatex.cn
 b2b_vin = WBAZV4104CL928554
+b2b_taskId: CE21784C-8796-859B-4CDF-EDFC62CFF330
+b2b_xrecord = X$    1          CA2576037AB260D7D868DE875CCC7B9B                                                             AR                X199992402089CLAIM-001501CA04            N06  0 1211  63890 2QQ  2270000500005000050000        1         1   1Q      0CNY  0 17 X2    222        1081       10089         0                                                                                     X4    2E  0471                                                                                                                  X5    2  070000050000050000050000050000050000                      LBV8V110XGMF78764            10                    2     00  X7    2D2F2F4G3H1J5K3L5M4M6N4O7O8P8Q4Q7Q8R1S1U8U9X4Y4Y5                                                                         X8    3O8K3Q4S1M6Q8O7G3U8R1Y4F4N4F2X4H1D2U9Q7P8L5M4J5Y5                                                                                                                       
 b2b_callingApplication = AXN
