update b2b user account

--- a/src/test/resources/data.prod.CN.properties
+++ b/src/test/resources/data.prod.CN.properties
@@ -1,6 +1,6 @@
 #B2B
-b2b_loginId = qdc_test5
-b2b_password = demo
+b2b_loginId = cn_insurer1.cn
+b2b_password = audatex
 b2b_url = https://www.audatex.cn
 b2b_vin = WBAZV4104CL928554
 b2b_taskId: CE21784C-8796-859B-4CDF-EDFC62CFF330
