add loginBRE for JP

--- a/src/test/resources/data.int2.JP.properties
+++ b/src/test/resources/data.int2.JP.properties
@@ -1,7 +1,6 @@
 test_url = https://www-int2.audatex.sg/breclient
-ins_username = A_JP_BRE_IN
-rep_username = A_JP_BRE_GA
-ins_change_owner_username = A_JP_BRE_IN_CO
+ins_username = M_JP_BRE_IN_BruceL
+rep_username = M_JP_BRE_GA_BruceL
 password = audatex
 
 # search tree
@@ -18,3 +17,8 @@ vin_manufacturer_code = 03
 vin_model_code = EE
 vin_submodel_code = 47
 
+#Existing case to be used
+url_to_ClaimInfoJP = https://www-int2.audatex.sg/breclient/ui?taskId=46F96007-9DA0-FA6D-AD22-4BC420859DE0&process=Generic&step=ClaimInfoJP
+url_to_DamageCaptureJP = https://www-int2.audatex.sg/breclient/ui?taskId=46F96007-9DA0-FA6D-AD22-4BC420859DE0&process=Generic&step=DamageCaptureJP
+url_checklist_over_200 = https://www-int2.audatex.sg/breclient/ui?taskId=410201DA-6B3B-5755-F7EA-5F0D584907EC&process=BRE&step=DamageCapturing
+url_checklist_over_100 = https://www-int2.audatex.sg/breclient/ui?taskId=7B20499D-1A11-B428-EBFB-99763E4CDEA0&process=BRE&step=DamageCapturing
