--- a/src/test/resources/data.int2.SG.properties
+++ b/src/test/resources/data.int2.SG.properties
@@ -1,6 +1,6 @@
 test_url = https://www-int2.audatex.sg/breclient
-ins_username = A_SG_BRE_IN
-rep_username = A_SG_BRE_GA
+ins_username = M_SG_BRE_IN_BruceL
+rep_username = M_SG_BRE_GA_BruceL
 svyr_username = A_SG_BRE_SV
 rep_change_owner_username = A_SG_BRE_GA_CO
 password = audatex
@@ -35,4 +35,8 @@ status_Inspecting = Inspecting
 status_Inspected = Inspected
 status_Pending_Agreement = Pending Agreement
 status_Repairing = Repairing
+
+#Existing case to be used
+url_to_GeneralDetailsSG = https://www-int2.audatex.sg/breclient/ui?taskId=9F9C5C75-2ECD-2D12-AEF9-E980DA557DA7&process=BRE&step=GeneralDetailsSG
+url_to_DamageCaptureSG = https://www-int2.audatex.sg/breclient/ui?taskId=9F9C5C75-2ECD-2D12-AEF9-E980DA557DA7&process=BRE&step=DamageCaptureSG
 
