added openExistingCase, vinQuery, activateQapter test cases

--- a/src/test/resources/data.int2.JP.properties
+++ b/src/test/resources/data.int2.JP.properties
@@ -11,6 +11,19 @@ searchTree_manufacturer_code = 03
 searchTree_model_code = EE
 searchTree_submodel_code = 47
 
+# BenzE
+benzE_vehicle = benzE
+benzE_vin = WDD2120362A842810
+benzE_manufacturer_code = 03
+benzE_model_code = EE
+benzE_submodel_code = 47
+benzE_submodel = 212.036
+# bmw320i
+#QapterTest for submodel
+QT_Manufacturer = BMW
+QT_Model = [12]
+QT_Submodel = 320i
+
 # VIN
 vin = WDD2120362A842810
 vin_manufacturer_code = 03
