--- a/src/test/resources/data.int2.SG.properties
+++ b/src/test/resources/data.int2.SG.properties
@@ -15,6 +15,14 @@ searchTree_manufacturer_code = 01
 searchTree_model_code = 12
 searchTree_submodel_code = 21
 
+# BMW320
+bmw320_vehicle = bmw320
+bmw320_vin = WBAVU31080FJ39054
+bmw320_manufacturer_code = 01
+bmw320_model_code = 12
+bmw320_submodel_code = 21
+bmw320_submodel = 320d
+
 # VIN
 vin = WBAVU31080FJ39054
 vin_manufacturer_code = 01
