added vinQuery, openCase, activateQapter for ID

--- a/src/test/resources/data.int2.ID.properties
+++ b/src/test/resources/data.int2.ID.properties
@@ -26,3 +26,7 @@ benzE_manufacturer_code = 03
 benzE_model_code = EE
 benzE_submodel_code = 47
 benzE_submodel = 212.036
+
+#Existing case to be used
+url_to_GeneralDetailsID = https://www-int2.audatex.sg/breclient/ui?taskId=718A9B82-3763-8FD9-F54F-7A1383D92B05&process=BRE&step=GeneralDetailsID
+url_to_DamageCaptureID = https://www-int2.audatex.sg/breclient/ui?taskId=718A9B82-3763-8FD9-F54F-7A1383D92B05&process=BRE&step=DamageCaptureID
