add B2B test cases for JP

--- a/src/test/resources/data.int2.JP.properties
+++ b/src/test/resources/data.int2.JP.properties
@@ -33,5 +33,12 @@ vin_submodel_code = 47
 #Existing case to be used
 url_to_ClaimInfoJP = https://www-int2.audatex.sg/breclient/ui?taskId=46F96007-9DA0-FA6D-AD22-4BC420859DE0&process=Generic&step=ClaimInfoJP
 url_to_DamageCaptureJP = https://www-int2.audatex.sg/breclient/ui?taskId=46F96007-9DA0-FA6D-AD22-4BC420859DE0&process=Generic&step=DamageCaptureJP
-url_checklist_over_200 = https://www-int2.audatex.sg/breclient/ui?taskId=410201DA-6B3B-5755-F7EA-5F0D584907EC&process=BRE&step=DamageCapturing
-url_checklist_over_100 = https://www-int2.audatex.sg/breclient/ui?taskId=7B20499D-1A11-B428-EBFB-99763E4CDEA0&process=BRE&step=DamageCapturing
+
+#B2B
+b2b_loginId = M_JP_BRE_IN_BruceL
+b2b_password = audatex
+b2b_taskId = 46F96007-9DA0-FA6D-AD22-4BC420859DE0
+b2b_url = https://www-int2.audatex.sg
+b2b_xrecord = X$    1          C7047D72D4881621E19BC3DB13DF3C2C                                                             AR                X199992500035E111301   013801            N06    0209  63890 2<<  2250000000000000050000        1         1   1<      0KRW  0 17 X2    251       100                                                                                                             X4    2L  0283 5.6    GM                                                                                                        X5    3  050000000000000000000000000000050000                      WBAPB11010WE07089       410KO 0                          00 1
+b2b_vin = WDD2120362A842810
+b2b_callingApplication = AXN
