--- a/src/test/resources/slack.tpe.server.properties
+++ b/src/test/resources/slack.tpe.server.properties
@@ -1,2 +1,2 @@
-#webhook_url = https://hooks.slack.com/services/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
-webhook_url = http://10.29.25.75/notify/slack
+webhook_url = https://hooks.slack.com/services/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
+#webhook_url = http://10.29.25.75/notify/slack
