--- a/src/test/resources/data.int2.HK.properties
+++ b/src/test/resources/data.int2.HK.properties
@@ -1,7 +1,7 @@
 #B2B
-b2b_loginId = M_TH_BRE_IN_BruceL
+b2b_loginId = M_HK_BRE_IN_BruceL
 b2b_password = audatex
-b2b_taskId = 96D9DCD4-EBF9-FE8D-B66F-C7E6D623C1BC
+b2b_taskId = B7A771F9-BEFA-61CA-278D-B7E249EB8009
 b2b_url = https://www-int2.audatex.sg
 b2b_xrecord = X$    1          C7047D72D4881621E19BC3DB13DF3C2C                                                             AR                X199992500035E111301   013801            N06    0209  63890 2<<  2250000000000000050000        1         1   1<      0KRW  0 17 X2    251       100                                                                                                             X4    2L  0283 5.6    GM                                                                                                        X5    3  050000000000000000000000000000050000                      WBAPB11010WE07089       410KO 0                          00 1
 b2b_vin = WBAVU31080FJ39054
