--- a/src/test/resources/data.int2.ID.properties
+++ b/src/test/resources/data.int2.ID.properties
@@ -28,5 +28,14 @@ benzE_submodel_code = 47
 benzE_submodel = 212.036
 
 #Existing case to be used
-url_to_GeneralDetailsID = https://www-int2.audatex.sg/breclient/ui?taskId=718A9B82-3763-8FD9-F54F-7A1383D92B05&process=BRE&step=GeneralDetailsID
-url_to_DamageCaptureID = https://www-int2.audatex.sg/breclient/ui?taskId=718A9B82-3763-8FD9-F54F-7A1383D92B05&process=BRE&step=DamageCaptureID
+url_to_GeneralDetailsID = https://www-int2.audatex.sg/breclient/ui?taskId=04559E88-1754-84ED-A806-5C82AF435D48&process=BRE&step=GeneralDetailsID
+url_to_DamageCaptureID = https://www-int2.audatex.sg/breclient/ui?taskId=04559E88-1754-84ED-A806-5C82AF435D48&process=BRE&step=DamageCaptureID
+
+#B2B
+b2b_loginId = M_ID_BRE_IN_BruceL
+b2b_password = audatex
+b2b_taskId = 04559E88-1754-84ED-A806-5C82AF435D48
+b2b_url = https://www-int2.audatex.sg
+b2b_xrecord = X$    1          C7047D72D4881621E19BC3DB13DF3C2C                                                             AR                X199992500035E111301   013801            N06    0209  63890 2<<  2250000000000000050000        1         1   1<      0KRW  0 17 X2    251       100                                                                                                             X4    2L  0283 5.6    GM                                                                                                        X5    3  050000000000000000000000000000050000                      WBAPB11010WE07089       410KO 0                          00 1
+b2b_vin = WDD2120362A842810
+b2b_callingApplication = AXN
