added test data for JP

--- a/src/test/resources/data.prod.JP.properties
+++ b/src/test/resources/data.prod.JP.properties
@@ -1,4 +1,4 @@
-test_url = https://www.audatex.sg/breclient
+test_url = https://www.audatex.jp/breclient
 ins_username = jp.insurer.jp
 rep_username = jp.repairer.jp
 ins_change_owner_username = jp_insurer1.jp
@@ -17,4 +17,13 @@ vin = WDD2120362A842810
 vin_manufacturer_code = 03
 vin_model_code = EE
 vin_submodel_code = 47
+
+#B2B
+b2b_loginId = jp.insurer.jp
+b2b_password = audatex
+b2b_taskId: 3717A234-9E2C-1AA0-784E-6776CA255398
+b2b_url = https://www.audatex.jp
+b2b_xrecord = X$    1          C7047D72D4881621E19BC3DB13DF3C2C                                                             AR                X199992500035E111301   013801            N06    0209  63890 2<<  2250000000000000050000        1         1   1<      0KRW  0 17 X2    251       100                                                                                                             X4    2L  0283 5.6    GM                                                                                                        X5    3  050000000000000000000000000000050000                      WBAPB11010WE07089       410KO 0                          00 1
+b2b_vin = WDD2120362A842810
+b2b_callingApplication = AXN
 
