--- a/src/test/resources/data.prod.KR.properties
+++ b/src/test/resources/data.prod.KR.properties
@@ -56,7 +56,7 @@ Rejected_KR = 반려
 b2b_loginId = Bruce.liao.in.kr
 b2b_password = demo
 b2b_taskId: C9AE457E-38F3-8E06-E981-0E7E1E07D085
-b2b_url = https://www.audatex.sg
+b2b_url = https://www.audatex.kr
 b2b_xrecord = X$    1          C7047D72D4881621E19BC3DB13DF3C2C                                                             AR                X199992500035E111301   013801            N06    0209  63890 2<<  2250000000000000050000        1         1   1<      0KRW  0 17 X2    251       100                                                                                                             X4    2L  0283 5.6    GM                                                                                                        X5    3  050000000000000000000000000000050000                      WBAPB11010WE07089       410KO 0                          00 1
 b2b_vin = WBAVU31080FJ39054
 b2b_callingApplication = AXN
