--- a/src/test/resources/data.prod.SG.properties
+++ b/src/test/resources/data.prod.SG.properties
@@ -1,1 +1,8 @@
-test_url = https://www.audatex.sg/breclient
+#B2B
+b2b_loginId = demo.insurer1.sg
+b2b_password = audatex
+b2b_taskId = F2F5109F-4A7E-A24C-B0AB-4A4141EF866E
+b2b_url = https://www.audatex.sg
+b2b_xrecord = X$    1          C7047D72D4881621E19BC3DB13DF3C2C                                                             AR                X199992500035E111301   013801            N06    0209  63890 2<<  2250000000000000050000        1         1   1<      0KRW  0 17 X2    251       100                                                                                                             X4    2L  0283 5.6    GM                                                                                                        X5    3  050000000000000000000000000000050000                      WBAPB11010WE07089       410KO 0                          00 1
+b2b_vin = WDD2120362A842810
+b2b_callingApplication = AXN
