--- a/src/test/resources/data.int2.JP.properties
+++ b/src/test/resources/data.int2.JP.properties
@@ -1,4 +1,4 @@
-test_url = https://www-int2.audatex.sg/breclient
+test_url = https://www-int2.audatex.sg/breclient/ui
 ins_username = M_JP_BRE_IN_BruceL
 rep_username = M_JP_BRE_GA_BruceL
 password = audatex
