--- a/src/test/resources/data.prod.KR.properties
+++ b/src/test/resources/data.prod.KR.properties
@@ -1,4 +1,4 @@
-test_url = https://www.audatex.kr/breclient
+test_url = https://www.audatex.kr/breclient/ui
 ins_username = Bruce.liao.in.kr
 rep_username = Bruce.liao.ga.kr
 password = demo
