--- a/src/test/resources/data.prod.JP.properties
+++ b/src/test/resources/data.prod.JP.properties
@@ -1,4 +1,4 @@
-test_url = https://www.audatex.jp/breclient
+test_url = https://www.audatex.jp/breclient/ui
 ins_username = jp.insurer.jp
 rep_username = jp.repairer.jp
 ins_change_owner_username = jp_insurer1.jp
