added JP PROD ui test cases

--- a/src/test/resources/data.prod.JP.properties
+++ b/src/test/resources/data.prod.JP.properties
@@ -14,9 +14,9 @@ searchTree_submodel_code = 47
 
 # VIN
 vin = WDD2120362A842810
-vin_manufacturer_code = 03
-vin_model_code = EE
-vin_submodel_code = 47
+benzE_manufacturer_code = 03
+benzE_model_code = EE
+benzE_submodel_code = 47
 
 #B2B
 b2b_loginId = jp.insurer.jp
