added SG Prod test cases AXNASEAN-3054

--- a/src/test/resources/data.prod.SG.properties
+++ b/src/test/resources/data.prod.SG.properties
@@ -1,3 +1,37 @@
+test_url = https://www.audatex.sg/breclient/ui
+ins_username = demo.insurer2.sg
+rep_username = demo.repairer2.sg
+svyr_username = demo.surveyor1.sg
+rep_change_owner_username = demo.repairer1.sg
+password = audatex
+plate_number = AUDA1234TEX
+currency = SGD
+ins_orgname = SG Insurer - SUB
+rep_orgname = SG Garage - SUB
+svyr_orgname = SG Surveyor
+
+# search tree
+Manufacturer = BMW
+Model = [12]
+SubModel = 320d
+searchTree_manufacturer_code = 01
+searchTree_model_code = 12
+searchTree_submodel_code = 21
+
+# BMW320
+bmw320_vehicle = bmw320
+bmw320_vin = WBAVU31080FJ39054
+bmw320_manufacturer_code = 01
+bmw320_model_code = 12
+bmw320_submodel_code = 21
+bmw320_submodel = 320d
+
+# VIN
+vin = WBAVU31080FJ39054
+vin_manufacturer_code = 01
+vin_model_code = 12
+vin_submodel_code = 21
+
 #B2B
 b2b_loginId = demo.insurer1.sg
 b2b_password = audatex
