--- a/src/test/resources/vehicleElement.JP.Properties
+++ b/src/test/resources/vehicleElement.JP.Properties
@@ -10,6 +10,7 @@ benzE_position_mp_0545_lDrivingLampBulb = 32_1_32000010
 benzE_newPictogram_airbags = pictogram-90
 benzE_position_4607And4608_sideAirbag = 59_35_59000019
 benzE_position_1401_windscreen =32_1_32000022
+benzE_position_0257_frontNumberPlate = navigation-tree-zone-content-part-0257-1_32000095
 
 #translation
 benzE_0471_part_description = BONNET
