--- a/src/test/resources/data.prod.ID.properties
+++ b/src/test/resources/data.prod.ID.properties
@@ -51,10 +51,10 @@ QT_VehicleValue = 50000000
 QT_WarningMessage = You are getting close to the vehicle value.
 
 #B2B
-b2b_loginId = M_ID_BRE_IN_BruceL
+b2b_loginId = id_insurer2.id
 b2b_password = audatex
-b2b_taskId = 04559E88-1754-84ED-A806-5C82AF435D48
-b2b_url = https://www-int2.audatex.sg
+b2b_taskId = F9188C25-473A-8090-D79E-923DCE9D6112
+b2b_url = https://www.audatex.id
 b2b_xrecord = X$    1          C7047D72D4881621E19BC3DB13DF3C2C                                                             AR                X199992500035E111301   013801            N06    0209  63890 2<<  2250000000000000050000        1         1   1<      0KRW  0 17 X2    251       100                                                                                                             X4    2L  0283 5.6    GM                                                                                                        X5    3  050000000000000000000000000000050000                      WBAPB11010WE07089       410KO 0                          00 1
 b2b_vin = WDD2120362A842810
 b2b_callingApplication = AXN
