minor fix on test data

--- a/src/test/resources/data.int2.ID.properties
+++ b/src/test/resources/data.int2.ID.properties
@@ -27,6 +27,14 @@ benzE_model_code = EE
 benzE_submodel_code = 47
 benzE_submodel = 212.036
 
+# BenzS
+benzS_vehicle = benzS
+benzS_vin = WDDUG6FB6EA031978
+benzS_manufacturer_code = 03
+benzS_model_code = A9
+benzS_submodel_code = 24
+benzS_submodel = 222.165
+
 #B2B
 b2b_loginId = M_ID_BRE_IN_BruceL
 b2b_password = audatex
