--- a/src/test/resources/data.prod.ID.properties
+++ b/src/test/resources/data.prod.ID.properties
@@ -51,7 +51,7 @@ QT_VehicleValue = 50000000
 QT_WarningMessage = You are getting close to the vehicle value.
 
 #B2B
-b2b_loginId = id_insurer2.id
+b2b_loginId = test.rep.id1
 b2b_password = audatex
 b2b_taskId = F9188C25-473A-8090-D79E-923DCE9D6112
 b2b_url = https://www.audatex.id
