--- a/src/test/resources/vehicleElement.ID.Properties
+++ b/src/test/resources/vehicleElement.ID.Properties
@@ -5,3 +5,43 @@ bmw320_position_0471_Bonnet = 32_2_32000028
 bmw320_position_2711_rearPanelCPL = 34_5_34010001
 bmw320_newPictogram_bodyPainting = pictogram-108
 bmw320_newPictogram_0910_engineCompartment = pictogram-808
+
+#VIN:WDDUG6FB6EA031978 (BenzS)
+benzS_zone_frontOuter = 0_1_30000023
+benzS_position_0471_Bonnet = 32_2_32000109
+benzS_newPictogram_bodyPainting = pictogram-108
+benzS_newPictogram_polishVehicle = pictogram-4518
+benzS_zone_rearDoors = 0_1_30000025
+benzS_position_1781And1782Door = 39_9_39000038
+benzS_position_mp_0561_lNut = 32_2_32000025
+benzS_newPictogram_0203_bodyShell = pictogram-812
+benzS_newPictogram_airbags = pictogram-90
+benzS_position_4607And4608_sideAirbag = 59_31_59000015
+benzS_position_1401_windscreen = 32_2_32000019
+
+#Audi
+audiA1_zone_frontOuter = 0_1_30000031
+
+#translation
+benzS_0471_part_description = BONNET
+benzS_0561_part_description = LEFT HEADLAMP UNIT
+replace_with_oem = Replace with OEM part
+repair = Repair
+benzS_4607_part_description = L/F SIDE AIRBAG
+benzS_1401_part_description = WINDSCREEN
+
+#guide no & part no
+benzS_bonnet_guideNo = 0471
+benzS_0471_oem_part_number = 222 880 0057
+benzS_sideAirbag_guideNo = 4607
+benzS_4607_oem_part_number = 222 860 0602
+benzS_2351_oem_part_number = 222 650 0209
+benzS_roofPanel_guideNo = 2351
+
+#search
+benzS_2351_part_description = ROOF PANEL
+benzS_2351_sheet_description = Bodywork Centre - Outer
+benzS_2351_model_options = 13, 16
+benzS_2351_model_submodel = S-CLASS (W/V222) 
+
+ID_currency_symbol = IDR
