update JP. SG prod test account

--- a/src/test/resources/data.prod.JP.properties
+++ b/src/test/resources/data.prod.JP.properties
@@ -1,6 +1,6 @@
 test_url = https://www.audatex.jp/breclient/ui
-ins_username = jp.insurer.jp
-rep_username = jp.repairer.jp
+ins_username = jp_insurer1.jp
+rep_username = jp_repairer1.jp
 ins_change_owner_username = jp_insurer1.jp
 password = audatex
 
