--- a/src/test/resources/data.prod.SG.properties
+++ b/src/test/resources/data.prod.SG.properties
@@ -1,7 +1,7 @@
 test_url = https://www.audatex.sg/breclient/ui
-ins_username = demo.insurer2.sg
-rep_username = demo.repairer2.sg
-svyr_username = demo.surveyor1.sg
+ins_username = hqtest1.ins.sg
+rep_username = hqtest1.rep.sg
+svyr_username = hqtest1.sur.sg
 rep_change_owner_username = demo.repairer1.sg
 password = audatex
 plate_number = AUDA1234TEX
