remove pageobject package to use bre-web-ui-element-1.0-SNAPSHOT.jar instead

--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,11 @@
             <systemPath>${project.basedir}/src/main/resources/axn-b2b-client-1.0-SNAPSHOT.jar</systemPath>
         </dependency>
         <dependency>
+            <groupId>com.solera.apac1.qa</groupId>
+            <artifactId>bre-web-ui-element</artifactId>
+            <systemPath>${project.basedir}/src/main/resources/bre-web-ui-element-1.0-SNAPSHOT.jar</systemPath>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
         </dependency>
