--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,7 @@
         <dependency>
             <groupId>com.solera.apac1.qa</groupId>
             <artifactId>bre-web-ui-element</artifactId>
+            <version>1.0</version>
             <systemPath>${project.basedir}/src/main/resources/bre-web-ui-element-1.0-SNAPSHOT.jar</systemPath>
         </dependency>
         <dependency>
