--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,7 @@
             <groupId>com.solera.apac1.qa</groupId>
             <artifactId>bre-web-ui-element</artifactId>
             <version>1.0</version>
+            <scope>system</scope>
             <systemPath>${project.basedir}/src/main/resources/bre-web-ui-element-1.0-SNAPSHOT.jar</systemPath>
         </dependency>
         <dependency>
