replace chromedriver with remote web driver

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <aspectj.version>1.9.0</aspectj.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+        <suiteXmlFile></suiteXmlFile>
         <skipTests>false</skipTests>
     </properties>
     <parent>
@@ -40,33 +40,13 @@
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>htmlunit-driver</artifactId>
-            <version>2.27</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.seleniumhq.selenium</groupId>
-                    <artifactId>selenium-support</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.seleniumhq.selenium</groupId>
-                    <artifactId>selenium-api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>3.7.1</version>
+            <version>3.141.59</version>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-server</artifactId>
-            <version>3.7.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-firefox-driver</artifactId>
-            <version>3.7.1</version>
+            <version>3.141.59</version>
         </dependency>
         <dependency>
             <groupId>com.aventstack</groupId>
@@ -198,13 +178,6 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/src/main/resources/axn-b2b-client-1.0-SNAPSHOT.jar</systemPath>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>com.solera.apac1.qa</groupId>-->
-        <!--<artifactId>bre-web-ui-element</artifactId>-->
-        <!--<version>1.0</version>-->
-        <!--<scope>system</scope>-->
-        <!--<systemPath>${project.basedir}/src/main/resources/bre-web-ui-element-1.0-SNAPSHOT.jar</systemPath>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
@@ -226,11 +199,16 @@
             <artifactId>lettuce-core</artifactId>
             <version>5.1.6.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.1.6.RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>com.solera.apac1.qa</groupId>
             <artifactId>bre-web-ui-element</artifactId>
-            <version>1.0-20190423.075441-1</version>
-            <scope>system</scope>
+            <version>1.0-20190503.061943-7</version>
         </dependency>
     </dependencies>
     <build>
@@ -251,13 +229,4 @@
             </plugin>
         </plugins>
     </build>
-    <!--<reporting>-->
-    <!--<plugins>-->
-    <!--<plugin>-->
-    <!--<groupId>org.apache.maven.plugins</groupId>-->
-    <!--<artifactId>maven-surefire-report-plugin</artifactId>-->
-    <!--<version>2.21.0</version>-->
-    <!--</plugin>-->
-    <!--</plugins>-->
-    <!--</reporting>-->
 </project>
