update test data

--- a/src/test/resources/data.int2.ID.properties
+++ b/src/test/resources/data.int2.ID.properties
@@ -36,7 +36,7 @@ benzS_submodel_code = 24
 benzS_submodel = 222.165
 
 #B2B
-b2b_loginId = M_ID_BRE_IN_BruceL
+b2b_loginId = M_ID_BRE_GA_BruceL
 b2b_password = audatex
 b2b_taskId = 04559E88-1754-84ED-A806-5C82AF435D48
 b2b_url = https://www-int2.audatex.sg
