--- a/src/test/resources/data.int2.SG.properties
+++ b/src/test/resources/data.int2.SG.properties
@@ -45,7 +45,7 @@ status_Pending_Agreement = Pending Agreement
 status_Repairing = Repairing
 
 #B2B
-b2b_loginId = M_SG_BRE_IN_BruceL
+b2b_loginId = M_SG_BRE_GA_BruceL
 b2b_password = audatex
 b2b_taskId = 9F9C5C75-2ECD-2D12-AEF9-E980DA557DA7
 b2b_url = https://www-int2.audatex.sg
