--- a/src/test/resources/data.prod.TW.properties
+++ b/src/test/resources/data.prod.TW.properties
@@ -11,6 +11,9 @@ b2b_callingApplication = AXN
 #TW VOLVO
 qw_b2b_url = http://gw.audatex.tw/tw-volvo-gateway/services/InterfaceService
 qw_b2b_loginId = AMA_WUH
+qw_b2b_vin = ?
+qw_b2b_plateNumber = ?
+qw_b2b_insuranceName = ?
 qw_b2b_claimNumber_claimInClosedFolder = SYSTEST-2018-12-05
 qw_b2b_claimNumber_claimInDeletedFolder = GDCQATEST001
 qw_b2b_claimNumber_claimInOpenFolder = AMAQA18100267
