--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
             <url>http://10.29.25.73/artifactory/libs-snapshot-local</url>
             <layout>default</layout>
         </repository>
+        <repository>
+            <id>reficio</id>
+            <url>http://repo.reficio.org/maven/</url>
+        </repository>
     </repositories>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -210,6 +214,11 @@
             <groupId>com.solera.apac1.qa</groupId>
             <artifactId>bre-web-ui-element</artifactId>
             <version>1.0-20190503.061943-7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.reficio</groupId>
+            <artifactId>soap-client</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
