added test data

--- a/src/test/resources/data.prod.JP.properties
+++ b/src/test/resources/data.prod.JP.properties
@@ -5,6 +5,7 @@ ins_change_owner_username = jp_insurer1.jp
 password = audatex
 
 # search tree
+benzE_vehicle = benzE
 Manufacturer = Mercedes-Benz
 Model = [EE]
 SubModel = 250
